package.json - server script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document violence dashboard</title>
+    <title>Documentor</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
